[gd_scene load_steps=23 format=2]

[ext_resource path="res://fonts/Poppins-MediumItalic.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://tutorials/scripts/tutorial.gd" type="Script" id=2]
[ext_resource path="res://tutorials/sprites/tutorial1.png" type="Texture" id=3]
[ext_resource path="res://tutorials/sprites/whitePixel.png" type="Texture" id=4]
[ext_resource path="res://tutorials/sprites/tutorial3.png" type="Texture" id=5]
[ext_resource path="res://tutorials/sprites/tutorial2.png" type="Texture" id=6]
[ext_resource path="res://tutorials/sprites/maskSquare.png" type="Texture" id=7]
[ext_resource path="res://fonts/Poppins-SemiBold.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://tutorials/sprites/tutorialTextBox.png" type="Texture" id=9]

[sub_resource type="Animation" id=1]
resource_name = "close"
length = 0.166667
step = 0.0333333
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.166667 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.166667 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.490196 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "open"
length = 0.166667
step = 0.0333333
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.166667 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.686275 ) ]
}

[sub_resource type="CanvasItemMaterial" id=11]

[sub_resource type="CanvasItemMaterial" id=12]
blend_mode = 2

[sub_resource type="DynamicFont" id=13]
size = 46
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=14]
size = 64
outline_size = 4
outline_color = Color( 0.427451, 0.415686, 0.666667, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=15]
size = 46
use_mipmaps = true
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="Animation" id=5]
length = 0.166667
step = 0.0333333
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.166667 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.0333333, 0.166667 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.166667
step = 0.0333333
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.133333, 0.166667 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.166667
step = 0.0333333
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.166667 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.0333333, 0.166667 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.166667
step = 0.0333333
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.133333, 0.166667 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.166667
step = 0.0333333
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.166667 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.0333333, 0.166667 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.166667
step = 0.0333333
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.133333, 0.166667 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}

[node name="tutorial" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 2 )

[node name="animator" type="AnimationPlayer" parent="."]
anims/close = SubResource( 1 )
anims/open = SubResource( 2 )

[node name="tutorialFade" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.490196 )
material = SubResource( 11 )
position = Vector2( 720, 1280 )
scale = Vector2( 1440, 2560 )
texture = ExtResource( 4 )

[node name="maskSquare" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.341176 )
material = SubResource( 12 )
texture = ExtResource( 7 )
offset = Vector2( 0, -100 )

[node name="tutorial0" type="Sprite" parent="."]
position = Vector2( 2779.52, 476.174 )
texture = ExtResource( 9 )

[node name="RichTextLabel" type="RichTextLabel" parent="tutorial0"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -918.5
margin_top = -638.0
margin_right = -157.5
margin_bottom = -33.0
custom_fonts/italics_font = SubResource( 13 )
custom_fonts/bold_font = SubResource( 14 )
custom_fonts/normal_font = SubResource( 15 )
custom_colors/default_color = Color( 0.427451, 0.415686, 0.666667, 1 )
bbcode_enabled = true
bbcode_text = "[center][b][color=#ffffff]Welcome to Numfall[/color][/b]

Numfall is a puzzle game about stacking pieces of equal value on top of each other to score points and create larger value pieces
[i]Tap to Continue[/i]"
text = "Welcome to Numfall

Numfall is a puzzle game about stacking pieces of equal value on top of each other to score points and create larger value pieces
Tap to Continue"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tutorial1" type="Sprite" parent="."]
position = Vector2( 1115.75, 1775.63 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="tutorial1"]
anims/close = SubResource( 5 )
anims/open = SubResource( 6 )

[node name="tutorial2" type="Sprite" parent="."]
position = Vector2( 745.041, 909.436 )
texture = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="tutorial2"]
anims/close = SubResource( 7 )
anims/open = SubResource( 8 )

[node name="tutorial3" type="Sprite" parent="."]
position = Vector2( 3.09772, 1320.96 )
texture = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="tutorial3"]
anims/close = SubResource( 9 )
anims/open = SubResource( 10 )
